--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
   padding-top: 17px;
   padding-bottom: 15px;
 }
-.menu-top {
+.header__content {
   max-width: 1545px;
   width: 100%;
   margin: auto;
@@ -59,9 +59,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1545px;
-  width: 100%;
-  margin: auto;
   padding-top: 12px;
   padding-bottom: 12px;
 }
@@ -163,9 +160,6 @@ form {
   box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.11);
 }
 .header__products-conteiner {
-  max-width: 1545px;
-  width: 100%;
-  margin: auto;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -193,9 +187,6 @@ form {
   background-color: #f4f2f2;
 }
 .promo__content {
-  max-width: 1545px;
-  width: 100%;
-  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -249,15 +240,77 @@ form {
 }
 
 .slider {
-  border: solid red 1px;
   width: 58.2%;
+  height: 476px;
 }
 .slider__img {
   width: 100%;
-  object-fit: none;
+  height: 100%;
+}
+.slide__conteiner {
+  position: absolute;
+  text-align: left;
+  width: 51%;
+  top: 60px;
+  left: 67px;
+}
+.slide__subtitle {
+  margin: 0;
+  font-size: 16px;
+  font-family: "Myriad Pro";
+  color: rgb(119, 119, 119);
+  line-height: 1.25;
+}
+.slide__title {
+  margin: 72px 0 16px;
+
+  font-size: 40px;
+  font-family: "Myriad Pro";
+  color: rgb(243, 241, 241);
+  line-height: 42px;
+}
+.slide__text {
+  margin: 0 0 65px;
+  font-size: 18px;
+  line-height: 20px;
+  color: #f3f1f1;
+  font-family: "Myriad Pro Light SemiExtended";
+}
+.slide__button {
+  margin: 0;
+  font-size: 18px;
+  font-family: "Myriad Pro";
+  color: rgb(255, 255, 255);
+  line-height: 18px;
+  background-color: rgb(255, 175, 45);
+  border-radius: 50px;
+  width: 129px;
+  padding: 7px 0 6px;
+  text-align: center;
+}
+.image-slider .swiper-button-next::after {
+  color: rgba(255, 255, 255, 0.502);
+  font-size: 24px;
+}
+.image-slider .swiper-pagination-bullets {
+  bottom: 33px;
+}
+.image-slider .swiper-pagination-bullet-active {
+  border-width: 1px;
+  border-color: rgb(35, 35, 35);
+  border-style: solid;
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+}
+.image-slider .swiper-pagination-bullet {
+  border-width: 1px;
+  border-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-radius: 50%;
 }
 .sale {
   border: 2px solid #ff8c00;
+  background-color: #ffffff;
   width: 19.3%;
   padding: 217px 0 52px;
 }
@@ -291,9 +344,6 @@ form {
   font-family: "Myriad Pro Light SemiExtended";
 }
 .brands {
-  max-width: 1545px;
-  width: 100%;
-  margin: auto;
   padding-top: 20px;
 }
 .brand__container {
@@ -314,17 +364,6 @@ form {
   object-fit: contain;
   margin: auto;
 }
-.Фигура_528_копия_5 {
-  border-width: 1px;
-  border-color: rgb(232, 231, 231);
-  border-style: solid;
-  position: absolute;
-  left: 443px;
-  top: 744px;
-  width: 0px;
-  height: 69px;
-  z-index: 50;
-}
 
 .brand__link {
   text-decoration: none;
@@ -335,10 +374,12 @@ form {
   max-width: 95px;
   margin: 0 auto;
 }
-.news {
+.main__content {
   max-width: 1420px;
   width: 100%;
   margin: auto;
+}
+.news {
   padding-top: 173px;
 }
 .news__title {
@@ -419,14 +460,284 @@ form {
   color: rgb(255, 175, 45);
   text-decoration: none;
 }
+.suggestion {
+  padding-top: 172px;
+}
+.suggestion__title {
+  width: 40%;
+  margin: 0 auto;
+  font-size: 40px;
+  font-family: "Myriad Pro";
+  color: rgb(35, 35, 35);
+  line-height: 1.2;
+  text-align: center;
+}
+.suggestion__text {
+  width: 45.5%;
+  margin: 16px auto 66px;
+  color: #787878;
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+}
+.suggestion__cards {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 41.8% 55.2%;
+  grid-gap: 13px;
+}
+.card__type-big {
+  width: 100%;
+  grid-row: 1/3;
+}
+.card__img {
+  width: 100%;
+  height: 100%;
+}
+.card__container-big {
+  max-width: 51%;
+  margin: auto;
+  top: 69px;
+  left: 24.6%;
+}
+.card {
+  position: relative;
+}
+.card__container {
+  position: absolute;
+}
+.card__author {
+  margin: 0;
+  text-transform: uppercase;
+  color: rgb(18, 18, 18);
+  font-size: 20px;
+  font-family: "Myriad Pro";
+  line-height: 1.2;
+  text-align: center;
+}
+.card__title {
+  margin: 14px 0 27px;
+  font-size: 30px;
+  font-family: "Myriad Pro";
+  color: rgb(18, 18, 18);
+  line-height: 1.2;
+  text-align: center;
+}
+.card__text {
+  margin: 0;
+  font-size: 16px;
+  font-family: "Myriad Pro";
+  color: rgb(119, 119, 119);
+  line-height: 1.2;
+  text-align: center;
+}
+.card__container-black {
+  width: 48%;
+  top: 121px;
+  left: 30%;
+}
+.text-left {
+  text-align: left;
+}
+.card__author-black {
+  color: rgb(255, 255, 255);
+  margin: 0;
+}
+
+.card__title-black {
+  color: rgb(255, 255, 255);
+  max-width: 50%;
+  margin: 0 0 27px;
+}
+.card__text-black {
+  margin: 0;
+}
+.card__container-cold {
+  width: 50%;
+  top: 96px;
+  left: 62px;
+}
+.offers {
+  padding: 170px 0 172px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.offers__text-container {
+  width: 60%;
+}
+.about__content {
+  width: 18.4%;
+}
+.offers__button {
+  color: #ffffff;
+  font-size: 26px;
+  width: 49px;
+  height: 49px;
+  border-radius: 50%;
+  background-color: rgb(35, 35, 35);
+  margin-top: 40px;
+}
+.offers__title {
+  font-size: 40px;
+  font-family: "Myriad Pro";
+  color: rgb(18, 18, 18);
+  line-height: 1.2;
+  margin: 0 0 20px;
+}
+.offers__text {
+  font-size: 18px;
+  font-family: "Myriad Pro Light SemiExtended";
+  color: #121212;
+  line-height: 20px;
+  margin: 0;
+  max-width: 92%;
+  white-space: pre-line;
+}
+.offers__subtitle {
+  color: #121212;
+  font-size: 40px;
+  font-family: "Myriad Pro Light SemiExtended";
+  line-height: 1.2;
+  margin: 35px 0 25px;
+}
+.about__logo {
+  display: flex;
+  flex-direction: column;
+}
+.about__img {
+  width: 151px;
+  height: 151px;
+}
+.about__logo-text {
+  font-size: 40px;
+  line-height: 38px;
+  font-family: "Myriad Pro";
+  color: #121212;
+  margin-top: 33px;
+}
+.about__text {
+  color: #777777;
+  font-size: 16px;
+  font-family: "Myriad Pro Light SemiExtended";
+  margin: 0;
+  line-height: 1.2;
+  margin: 0 0 32px;
+}
+.about__title {
+  color: #171717;
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  margin: 0;
+}
+.about__subtitle {
+  font-size: 18px;
+  line-height: 24px;
+  margin: 0;
+  font-family: "Myriad Pro Light SemiExtended";
+  color: #777777;
+}
+.about__list {
+  text-align: left;
+  list-style: none;
+  padding: 0;
+  margin: 25px 0 0;
+}
+.about__item {
+  text-align: left;
+  color: #171717;
+  font-size: 18px;
+  line-height: 20px;
+  font-family: "Myriad Pro Light SemiExtended";
+}
+.footer__navigation {
+  background-color: #232323;
+}
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-top: 93px;
+  padding-bottom: 84px;
+  font-family: "Myriad Pro Light SemiExtended";
+  color: rgb(119, 119, 119);
+}
+.footer__list {
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+.footer__link {
+  font-family: "Myriad Pro Light SemiExtended";
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 24px;
+  text-decoration: none;
+}
+.footer__subtitle {
+  font-size: 24px;
+  line-height: 24px;
+  margin: 0 0 30px;
+}
+.contact__list {
+  margin: 0 0 24px;
+  list-style: none;
+  padding: 0;
+  font-family: "Myriad Pro Light SemiExtended";
+  color: #ffffff;
+}
+.contact__list:last-child {
+  margin-bottom: 0;
+}
+.footer {
+  background-color: #191919;
+}
+.footer__container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 45px;
+  padding-bottom: 22px;
+}
+.footer__logo {
+  display: flex;
+  align-items: center;
+}
+.footer__image {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+}
+.footer__content {
+  margin-left: 17px;
+}
+.footer__logo-text {
+  font-size: 24px;
+  line-height: 26px;
+  font-family: "Myriad Pro";
+  color: rgb(255, 255, 255);
+}
+.footer__logo-subtitle {
+  color: #787878;
+  font-size: 16px;
+  line-height: 18px;
+  font-family: "Myriad Pro Light SemiExtended";
+  margin: 0;
+}
+.footer__development {
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-family: "Myriad Pro";
+  line-height: 1.59;
+  margin: 0;
+}
 
 @media screen and (max-width: 1648px) {
-  .menu-top {
+  .header__content {
     max-width: 1300px;
   }
 }
 @media screen and (max-width: 1400px) {
-  .menu-top {
+  .header__content {
     max-width: 1200px;
   }
   .menu-top__list {
@@ -435,7 +746,7 @@ form {
   }
 }
 @media screen and (max-width: 1300px) {
-  .menu-top {
+  .header__content {
     max-width: 1160px;
   }
   .menu-top__list {
@@ -444,12 +755,12 @@ form {
   }
 }
 @media screen and (max-width: 1200px) {
-  .menu-top {
+  .header__content {
     max-width: 1060px;
   }
 }
 @media screen and (max-width: 1140px) {
-  .menu-top {
+  .header__content {
     max-width: 1000px;
   }
   .menu-top__list {
@@ -468,12 +779,12 @@ form {
   }
 }
 @media screen and (max-width: 1040px) {
-  .menu-top {
+  .header__content {
     max-width: 900px;
   }
 }
 @media screen and (max-width: 969px) {
-  .menu-top {
+  .header__content {
     max-width: 900px;
   }
   .menu-top__list {
@@ -482,7 +793,7 @@ form {
   }
 }
 @media screen and (max-width: 900px) {
-  .menu-top {
+  .header__content {
     max-width: 768px;
   }
   .menu-top__list {
@@ -491,7 +802,7 @@ form {
   }
 }
 @media screen and (max-width: 767px) {
-  .menu-top {
+  .header__content {
     max-width: 767px;
   }
 }
